# GraceEngine

./: .gitignore  CMakeLists.txt  README.md  build-all.bat
engine/: CMakeLists.txt  build.bat
engine/renderer/: renderer_backend.c  renderer_backend.h  renderer_fronted.c  renderer_fronted.h  renderer_types.h
engine/src/: core.h  defines.h  entry.h  game_types.h  test.c
engine/src/container/: darray.c  darray.h
engine/src/core/: application.c  application.h  asserts.h  clock.c  clock.h  event.c  event.h  input.c  input.h  kmemory.c  kmemory.h  kstring.c  kstring.h  logger.c  logger.h
engine/src/platform/: platform.h  platform_linux.c  platform_macos.c  platform_win32.c
engine/src/renderer/: renderer_backend.c  renderer_backend.h  renderer_fronted.c  renderer_fronted.h  renderer_types.h
engine/src/renderer/vulkan/: vulkan_backend.c  vulkan_backend.h  vulkan_buffer.c  vulkan_buffer.h  vulkan_command_buffer.c  vulkan_command_buffer.h  vulkan_device.c  vulkan_device.h  vulkan_image.c  vulkan_image.h  vulkan_platform.h  vulkan_renderpass.c  vulkan_renderpass.h  vulkan_swapchain.c  vulkan_swapchain.h  vulkan_types.h
testbed/: CMakeLists.txt  build.bat
testbed/src/: entry.c  game.c  game.h  main.c
